# MLprod

./: .dockerignore  .gitignore  .pre-commit.yaml  Dockerfile.api  Dockerfile.worker  LICENSE  Makefile  README.md  api.py  dataset_generator.py  debug_requests.py  docker-compose.yaml  grafana.json  ml_code.ipynb  pip.install.txt  pyproject.toml  requirements.api.txt  requirements.txt  requirements.worker.txt  traffic_generator.py  workbench.py  worker.py
api/: models.py  requests.py  routes.py
api/db/: crud.py  models.py  schemas.py  startup.py  tables.py
api/middleware/: metrics.py
api/models/: monitor.py  schema.py
config/: README.md  location.tsv  prometheus.yml  user.tsv  user_noise.tsv
configs/: logging.yaml  user.tsv  user_noise.tsv
database/: crud.py  database.py  startup.py  tables.py
datas/: __init__.py  coordinates.py  feature.py  labels.py  locations.py  users.py  utils.py
dataset/: README.md
docker/: Dockerfile.api  Dockerfile.node  docker-compose.traefik.yaml  docker-compose.yaml
docs/source/: conf.py  index.rst
docs/source/components/: api.rst  db.rst  docker.rst  monitoring.rst  routes.rst  tasks.rst
extra/: docker-compose.traefik.yaml
grafana/: README.md
grafana/dashboards/: monitoring.json
grafana/provisioning/dashboards/: dashboards.yaml
grafana/provisioning/datasources/: datasources.yml  prometheus.yml
models/: README.md  __init__.py  dummy.py
notebooks/: ml_code.ipynb
scripts/: dataset_generator.py  traffic_generator.py
src/MLProd/api/: routes.py
src/MLProd/data/: __init__.py  configs.py  labels.py  locations.py  users.py
src/MLProd/database/: database.py
src/MLProd/worker/: celeryconfig.py
src/MLProd/worker/models/: __init__.py  train.py
src/MLProd/worker/tasks/: inference.py  train.py
src/mlprod/: logs.py
src/mlprod/api/: __main__.py  requests.py  routes.py
src/mlprod/api/middleware/: metrics.py
src/mlprod/data/: __init__.py  coordinates.py  labels.py  locations.py  users.py  utils.py
src/mlprod/database/: __init__.py  crud.py  database.py  startup.py  tables.py
src/mlprod/worker/: celery.py  celeryconfig.py
src/mlprod/worker/models/: __init__.py  model.py  pipeline.py  train.py
src/mlprod/worker/tasks/: inference.py  train.py
utils/: generators.py
worker/: celery.py  celeryconfig.py  pred.py  tasks.py
worker/models/: __init__.py  model.py  pipeline.py  preprocess.py  train.py  wrapper.py
worker/tasks/: inference.py  train.py
